calculator/src/index.css
html {
  font-family: "Lato", sans-serif;
  font-style: normal;
  background: #f8f8f8;
}

html,
body,
#root,
.container,
.result {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

.container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.header {
  text-align: center;
  margin: 0;
}

.logo {
  margin: 0;
}

.main {
  max-width: 80vw;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

@media (min-width: 720px) {
  .main {
    max-width: 500px;
  }
}

.submit {
  margin-top: 10px;
  margin-bottom: 10px;
  background: #ee5230;
  box-sizing: border-box;
  border: none;
  border-radius: 6px;
  text-align: center;
  padding: 8px;
  width: 100%;

  cursor: pointer;

  font-weight: medium;
  line-height: normal;
  font-size: 18px;
  text-align: center;

  color: #ffffff;
}

.text-muted {
  margin-top: 10px;
}

.link {
  text-align: center;
}

.view-header {
  width: 100%;
  display: flex;
  flex-direction: row;
}

.close {
  flex: 1;
  text-align: right;
  cursor: pointer;
}

/*-------- Form --------*/

.form-group {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-bottom: 1.5rem;
  margin-top: 1.5rem;
}

.form-label {
  position: absolute;
  top: 0;
  margin: 0.95rem;
  transition: all 200ms;
  background: rgba(255, 255, 255, 0);
  padding-right: 5px;
  padding-left: 5px;
  left: 10px;
  font-size: 1.1rem;
  opacity: 0.5;
  overflow: hidden;
  white-space: nowrap;
}

.form-input {
  width: 100%;
  height: 3.1rem;
  background: rgba(255, 255, 255, 0);
  padding-left: 20px;
  border-radius: 6px;
  border-style: solid;
  border-color: #ccc;
  border-width: 1px;
  box-sizing: border-box;
  font-size: 1.2rem;
}

.form-input:focus {
  box-shadow: none !important;
  border-width: 2px;
  border-color: inset;
}

.form-input:focus + .form-label {
  transform: scale(0.85) translateY(-2rem) translateX(-20%) !important;
  background: #f8f8f8 !important;
  opacity: 1 !important;
}

.form-input:valid + .form-label,
.form-input:invalid + .form-label {
  transform: scale(0.85) translateY(-2rem) translateX(-20%);
  background: #f8f8f8;
  opacity: 1;
}

.form-input:invalid[value=""] + .form-label {
  background: rgba(255, 255, 255, 0);
  transform: none;
  opacity: 0.5;
}

/*-------- Result --------*/

.result {
  background: #ee5230;
  color: #f8f8f8;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  z-index: 1;
}

.result-header {
  margin-top: 30px;
}

.table {
  margin-bottom: 70px;
}

/*-------- Ingredient --------*/

.ingredient {
  display: flex;
  border-bottom: solid 3px #fff;
  width: 100%;
  padding: 20px;
}

.ingredient:last-of-type {
  border-bottom: none;
}

.ingredient-element {
  display: flex;
  flex-grow: 1;
  text-align: center;
  justify-content: center;
  width: 33.33%;
}

@media (min-width: 550px) {
  .ingredient-element {
    font-size: 1.5rem;
  }
}

.ingredient-element > p {
  margin: 0;
  display: inline-block;
}

.ingredient-amount {
  max-width: 80%;
  overflow: hidden;
}

/*-------- Animations --------*/

.fade-enter {
  position: absolute;
  opacity: 0;
  z-index: 99;
}

.fade-enter.fade-enter-active {
  opacity: 1;
  transition: opacity 200ms ease-in;
}

.fade-exit {
  position: absolute;

  opacity: 1;
  z-index: 1;
}

.fade-exit.fade-exit-active {
  opacity: 0;
  transition: opacity 200ms ease-in;
}

.pwa {
  display: none;
  color: blue;
  text-decoration: underline;
}

